# OpenGL-CMake-Project

./: .gitignore  CMakeLists.txt  rebuild.bat
src/: main.cpp
src/common/: Camera.cpp  Camera.h  Shader.h
src/examples/fractals/mandelbrot/: MandelbrotExample.cpp
src/examples/fractals/mandelbrot/shaders/: mandelbrot.frag
src/examples/primitives/capsule/: CapsuleExample.cpp
src/examples/primitives/capsule/shaders/: capsule.frag
src/examples/primitives/cube/: CubeExample.cpp
src/examples/primitives/cube/shaders/: cube.frag
src/examples/primitives/sphere/: SphereExample.cpp
src/examples/primitives/sphere/shaders/: sphere.frag
src/examples/primitives/torus/: TorusExample.cpp
src/examples/primitives/torus/shaders/: torus.frag  torus.vert
src/shader/: Shader.h
